@@ -4,5 +4,6 @@
 4.Added an octothorpe on line 25 in index.html
 5.Moved next.jpg from root to root/images
 6.Added "." to the location of css files (ie. /css/superHeroTheme.css > ./css/superHeroTheme ) in index.html
-7?. Added Semicolon to line 84 of index.html
-8. Added "." to the location of css files (ie. /css/superHeroTheme.css > ./css/superHeroTheme ) in controller.html
+7?.Added Semicolon to line 84 of index.html
+8.Added "." to the location of css files (ie. /css/superHeroTheme.css > ./css/superHeroTheme ) in controller.html
+9.Changed 2 to 1 in substring on line 20 in OpenPresenter.js
